--- a/ws/composer.json
+++ b/ws/composer.json
@@ -1,15 +1,5 @@
 {
     "require": {
-        "mikecao/flight": "^1.3",
-        "vlucas/phpdotenv": "^5.5",       
-        "firebase/php-jwt": "^6.4",          
-        "respect/validation": "^2.2",        
-        "monolog/monolog": "^2.8",  
-        "twig/twig": "^3.0"                  
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "ws/"
-        }
+        "mikecao/flight": "^1.3"
     }
 }
